--- a/Release/settings.ini
+++ b/Release/settings.ini
@@ -12,9 +12,9 @@ framerateLimit = 0
 enableScreenShaders = 1
 enableNightShadows = 1
 enableBetterShadows = 1
+enableBetterLight = 1
 enableTextureSmoothing = 0
 enableCameraBlur = 0
-pixelization = 5000
 shadowBlur = 1
 visualUnitHoverColorCode = 1
 
@@ -55,6 +55,7 @@ hkCamMoveDown = 18
 hkCamMoveLeft = 0
 hkCamMoveRight = 3
 hkCamToHero = 57
+hkChat = 58
+hkConsole = 54
 hkDebugMode = 87
 hkDebugAdvanced = 88
-hkConsole = 54
