--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
@@ -79,6 +79,12 @@
     <Filter Include="Файлы исходного кода\Util\Buff">
       <UniqueIdentifier>{a5c7dc7d-d786-4140-8988-eebe78704e17}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Файлы исходного кода\Chat">
+      <UniqueIdentifier>{ae070c1d-e4c4-4ca8-98c0-b60b0b9f8f0f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Файлы исходного кода\UI\Interfaces">
+      <UniqueIdentifier>{9d68e313-af4b-4a57-a605-f5d53a81770e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="console_cmd.cpp">
@@ -119,9 +125,6 @@
     </ClCompile>
     <ClCompile Include="server_util.cpp">
       <Filter>Файлы исходного кода\Network</Filter>
-    </ClCompile>
-    <ClCompile Include="UI_inventory.cpp">
-      <Filter>Файлы исходного кода\UI</Filter>
     </ClCompile>
     <ClCompile Include="UI_util.cpp">
       <Filter>Файлы исходного кода\UI</Filter>
@@ -285,6 +288,18 @@
     <ClCompile Include="buff_main.cpp">
       <Filter>Файлы исходного кода\Util\Buff</Filter>
     </ClCompile>
+    <ClCompile Include="chat_main.cpp">
+      <Filter>Файлы исходного кода\Chat</Filter>
+    </ClCompile>
+    <ClCompile Include="chat_util.cpp">
+      <Filter>Файлы исходного кода\Chat</Filter>
+    </ClCompile>
+    <ClCompile Include="UI_chat.cpp">
+      <Filter>Файлы исходного кода\UI\Interfaces</Filter>
+    </ClCompile>
+    <ClCompile Include="UI_inventory.cpp">
+      <Filter>Файлы исходного кода\UI\Interfaces</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h">
@@ -385,6 +400,9 @@
     </ClInclude>
     <ClInclude Include="buff.h">
       <Filter>Файлы исходного кода\Util\Buff</Filter>
+    </ClInclude>
+    <ClInclude Include="chat.h">
+      <Filter>Файлы исходного кода\Chat</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
