--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj
@@ -88,7 +88,7 @@
       <ForcedIncludeFiles>precomp.h%(ForcedIncludeFiles)</ForcedIncludeFiles>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
@@ -112,6 +112,7 @@
     <ClCompile Include="audio_util.cpp" />
     <ClCompile Include="buff_main.cpp" />
     <ClCompile Include="camera_main.cpp" />
+    <ClCompile Include="chat_log.cpp" />
     <ClCompile Include="chat_main.cpp" />
     <ClCompile Include="chat_util.cpp" />
     <ClCompile Include="client_main.cpp" />
