Working with chat
- [Added] Better chat window
- [Added] Chat settings
- [Added] settings.* console commands
- [Added] Ignore for screenshots

--- a/Release/settings.ini
+++ b/Release/settings.ini
@@ -24,11 +24,21 @@ enableQuickCast = 0
 enableMouseScroll = 1
 enableDynamicTooltips = 0
 
+[Chat]
+chatPosX = 0
+chatPosY = -50
+chatSizeX = 400
+chatSizeY = 250
+chatFontSize = 16
+chatLineSpacing = 1
+chatScrollSpeed = 1
+enableChatTimestamps = 0
+
 [Console]
-enableConsoleTimestamps = 0
 consoleFontSize = 12
 consoleLineSpacing = 2
 consoleScrollSpeed = 7
+enableConsoleTimestamps = 0
 
 [Audio]
 enableCameraListener = 1
