Working with chat
- [Added] Actual chat functionality
- [Added] Chat background is not displayed for messages
- [Added] Player name
- [Added] Console "say" command
- [Added] UI text outline support
- [Fixed] UI buttons reacting to console or chat button presses

--- a/Release/settings.ini
+++ b/Release/settings.ini
@@ -25,11 +25,12 @@ enableMouseScroll = 1
 enableDynamicTooltips = 0
 
 [Chat]
+playerName = Kos94ok
 chatPosX = 0
 chatPosY = -50
 chatSizeX = 400
 chatSizeY = 250
-chatFontSize = 16
+chatFontSize = 14
 chatLineSpacing = 1
 chatScrollSpeed = 1
 enableChatTimestamps = 0
