Hardcore multiplayer tech update [Warnings!]
- [Warning] Possible memory leaks (history data vectors)
- [Warning] Possible crashing (server data queue limits)

--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="saveload_util.cpp" />
     <ClCompile Include="script_main.cpp" />
     <ClCompile Include="script_data.cpp" />
+    <ClCompile Include="server_history.cpp" />
     <ClCompile Include="server_main.cpp" />
     <ClCompile Include="server_message.cpp" />
     <ClCompile Include="server_pack.cpp" />
