--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj
@@ -88,7 +88,7 @@
       <ForcedIncludeFiles>precomp.h%(ForcedIncludeFiles)</ForcedIncludeFiles>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
@@ -97,6 +97,13 @@
       </StackReserveSize>
       <ProgramDatabaseFile>$(MSBuildProjectDirectory)/$(TargetName).pdb</ProgramDatabaseFile>
     </Link>
+    <PreBuildEvent>
+      <Command>del "$(ProjectDir)Release\macro.obj"</Command>
+    </PreBuildEvent>
+    <PostBuildEvent>
+      <Command>
+      </Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release 3|Win32'">
     <Link>
@@ -139,6 +146,7 @@
     <ClCompile Include="item_active.cpp" />
     <ClCompile Include="logic_orders.cpp" />
     <ClCompile Include="logic_units.cpp" />
+    <ClCompile Include="macro.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="math_main.cpp" />
     <ClCompile Include="overworld_main.cpp" />
