Working with weather
- [Added] Particle system
- [Added] Weather system
- [Added] "weather.set" and "weather.getlist" commands
- [Added] REF_UNIT_ALWAYSVISIBLE_TOP
- [Added] REF_UNIT_ALWAYSVISIBLE_BOT
- [Added] cGame::getLocalUnit()
- [Fixed] Lifetimer for local units
- [Fixed] Mouse pointer under the console
- [Fixed] Some random crashes on harvest

--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj
@@ -146,10 +146,12 @@
     <ClCompile Include="item_active.cpp" />
     <ClCompile Include="logic_orders.cpp" />
     <ClCompile Include="logic_units.cpp" />
+    <ClCompile Include="logic_particle.cpp" />
     <ClCompile Include="macro.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="math_main.cpp" />
     <ClCompile Include="overworld_main.cpp" />
+    <ClCompile Include="particle_main.cpp" />
     <ClCompile Include="path_main.cpp" />
     <ClCompile Include="precomp.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -183,6 +185,7 @@
     <ClCompile Include="visual_gen.cpp" />
     <ClCompile Include="visual_main.cpp" />
     <ClCompile Include="visual_mouse.cpp" />
+    <ClCompile Include="weather_main.cpp" />
     <ClCompile Include="window_event.cpp" />
     <ClCompile Include="window_main.cpp" />
     <ClCompile Include="paint_main.cpp" />
@@ -230,6 +233,7 @@
     <ClInclude Include="unit.h" />
     <ClInclude Include="util.h" />
     <ClInclude Include="visual.h" />
+    <ClInclude Include="weather.h" />
     <ClInclude Include="window.h" />
     <ClInclude Include="world.h" />
   </ItemGroup>
