--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
@@ -97,8 +97,11 @@
     <Filter Include="Файлы исходного кода\Window\Pre-Render">
       <UniqueIdentifier>{056a02b9-7a01-4f52-963c-b776b6a6981e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Файлы исходного кода\Util\Weather">
+      <UniqueIdentifier>{52b82e8c-2010-442f-88dd-bc6e8da784be}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Файлы исходного кода\Character\Particle">
-      <UniqueIdentifier>{5ea1c5d8-6b87-4cce-bb62-52759c70be54}</UniqueIdentifier>
+      <UniqueIdentifier>{06e86680-257d-4c9b-9550-0c0dfb1eba05}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -342,6 +345,15 @@
     <ClCompile Include="macro.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="weather_main.cpp">
+      <Filter>Файлы исходного кода\Util\Weather</Filter>
+    </ClCompile>
+    <ClCompile Include="particle_main.cpp">
+      <Filter>Файлы исходного кода\Character\Particle</Filter>
+    </ClCompile>
+    <ClCompile Include="logic_particle.cpp">
+      <Filter>Файлы исходного кода\Logic</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h">
@@ -451,6 +463,9 @@
     </ClInclude>
     <ClInclude Include="prerender.h">
       <Filter>Файлы исходного кода\Window\Pre-Render</Filter>
+    </ClInclude>
+    <ClInclude Include="weather.h">
+      <Filter>Файлы исходного кода\Util\Weather</Filter>
     </ClInclude>
     <ClInclude Include="particle.h">
       <Filter>Файлы исходного кода\Character\Particle</Filter>
