--- a/Release/settings.ini
+++ b/Release/settings.ini
@@ -1,7 +1,7 @@
 [Display]
-screenMode = 0
-screenWidth = 1280
-screenHeight = 800
+screenMode = 1
+screenWidth = 1600
+screenHeight = 900
 consoleWidth = 650
 consoleHeight = 350
 enableVertSync = 0
@@ -16,6 +16,8 @@ enableBetterLight = 1
 enableTextureSmoothing = 0
 enableCameraBlur = 1
 shadowBlur = 1
+enableParticleShadows = 1
+enablePreciseParticleShadows = 0
 visualUnitHoverColorCode = 1
 
 [Gameplay]
