Working with weather
- [Added] Dynamic weather change
- [Added] Hide Interface button
- [Added] Weather server-client synchronization
- [Improved] Particle render

--- a/Release/settings.ini
+++ b/Release/settings.ini
@@ -16,8 +16,9 @@ enableBetterLight = 1
 enableTextureSmoothing = 0
 enableCameraBlur = 1
 shadowBlur = 1
-enableParticleShadows = 0
-enablePreciseParticleShadows = 0
+enableParticleShadows = 1
+enableBetterParticleShadows = 1
+enablePreciseParticleShadows = 1
 visualUnitHoverColorCode = 1
 
 [Gameplay]
@@ -72,3 +73,5 @@ hkChat = 58
 hkConsole = 54
 hkDebugMode = 87
 hkDebugAdvanced = 88
+hkHideInterface = 95
+hkScreenshot = 96
