--- a/Release/settings.ini
+++ b/Release/settings.ini
@@ -4,7 +4,7 @@ screenWidth = 1600
 screenHeight = 900
 consoleWidth = 650
 consoleHeight = 350
-enableVertSync = 0
+enableVertSync = 1
 sampleMod = 100
 framerateLimit = 0
 
@@ -19,6 +19,8 @@ shadowBlur = 1
 enableParticleShadows = 1
 enableBetterParticleShadows = 1
 enablePreciseParticleShadows = 1
+cloudDensity = 200
+particleDensity = 100
 visualUnitHoverColorCode = 1
 
 [Gameplay]
