--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="api_main.cpp" />
     <ClCompile Include="audio_main.cpp" />
     <ClCompile Include="audio_util.cpp" />
+    <ClCompile Include="aura_main.cpp" />
     <ClCompile Include="buff_main.cpp" />
     <ClCompile Include="camera_main.cpp" />
     <ClCompile Include="chat_log.cpp" />
@@ -202,6 +203,7 @@
     <ClInclude Include="animation.h" />
     <ClInclude Include="api.h" />
     <ClInclude Include="audio.h" />
+    <ClInclude Include="aura.h" />
     <ClInclude Include="buff.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="chat.h" />
